<!--
  ~ Copyright (C) 2017 Seht (R) Hyx Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Volume Notification</string>
    <string name="app_name_short">Vol Notification</string>

    <string name="menu_toggle_title">Notification enabled</string>
    <string name="menu_pref_title">Notification settings</string>
    <string name="menu_dark_app_theme_title">Dark theme</string>
    <string name="menu_about_title">Show your love :)</string>
    <string name="menu_about_url">https://github.com/seht/volumenotification/issues</string>

    <string name="target_api_welcome_message_N">Nice! Your device is running Android N.\n\nYou should give tiles a try. You can find them in your quick settings, by pulling the notification drawer, where you can edit them, at the top. Just drag them in and that\'s it.\n\nThen you can just disable the notification using the menu above.</string>

    <string name="pref_dialog_alert_nonce_checked_label">Sweet! But don\'t remind me again.</string>

    <bool name="pref_dark_app_theme_default">false</bool>

    <string name="text_home_1">Please use the action bar menu to navigate the app.</string>
    <string name="text_home_2">Made with all the love in the world.</string>
    <string name="text_home_3">&lt;3</string>

    <bool name="pref_enabled_default">true</bool>

    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">Choose the notification theme</string>
    <string-array name="pref_theme_entries">
        <item>Material: Dark</item>
        <item>Material: Light</item>
        <item>Material: Blue Grey</item>
        <item>Holo: Dark</item>
        <item>Holo: Light</item>
        <item>Custom theme</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>theme_material</item>
        <item>theme_material_light</item>
        <item>theme_material_blue_grey</item>
        <item>theme_holo</item>
        <item>theme_holo_light</item>
        <item>theme_custom</item>
    </string-array>
    <string name="pref_theme_default">theme_material_light</string>

    <string name="pref_buttons_title">Buttons</string>
    <string name="pref_buttons_summary">Select and reorder the volume buttons</string>
    <string-array name="pref_buttons_entries">
        <item>- None -</item>
        <item>@string/btn_sel_1_label</item>
        <item>@string/btn_sel_2_label</item>
        <item>@string/btn_sel_3_label</item>
        <item>@string/btn_sel_4_label</item>
        <item>@string/btn_sel_5_label</item>
        <item>@string/btn_sel_6_label</item>
    </string-array>

    <string name="btn_sel_1_label">Media volume</string>
    <string name="btn_sel_2_label">Call volume</string>
    <string name="btn_sel_3_label">Ring volume</string>
    <string name="btn_sel_4_label">Notification volume</string>
    <string name="btn_sel_5_label">Alarm volume</string>
    <string name="btn_sel_6_label">System volume</string>

    <bool name="pref_buttons_checked_btn_1_default">true</bool>
    <bool name="pref_buttons_checked_btn_2_default">true</bool>
    <bool name="pref_buttons_checked_btn_3_default">true</bool>
    <bool name="pref_buttons_checked_btn_4_default">false</bool>
    <bool name="pref_buttons_checked_btn_5_default">false</bool>
    <bool name="pref_buttons_checked_btn_6_default">false</bool>

    <string name="pref_cat_style_title">Appearance</string>
    <string name="pref_cat_config_title">Configuration</string>
    <string name="pref_cat_behavior_title">Behavior</string>

    <string name="pref_custom_theme_title">Custom theme</string>
    <string name="pref_custom_theme_summary">Change the custom theme colors</string>

    <string name="pref_custom_theme_background_color_title">Background color</string>
    <string name="pref_custom_theme_background_color_default">darkgrey</string>

    <string name="pref_custom_theme_icon_color_title">Icon color</string>
    <string name="pref_custom_theme_icon_color_default">#00BFA5</string>

    <string name="pref_custom_theme_color_help">Formats: #RRGGBB, #AARRGGBB, \"color name\"</string>

    <string name="pref_custom_theme_color_error_message">Invalid color name or format</string>

    <string name="pref_translucent_title">Translucent background</string>
    <string name="pref_translucent_summary">* Background transparency is only compatible with translucent launchers.</string>
    <bool name="pref_translucent_default">false</bool>

    <string name="pref_boot_title">Start at boot</string>
    <string name="pref_boot_summary">Create notification when device starts</string>
    <bool name="pref_boot_default">true</bool>

    <string name="pref_top_priority_title">Top priority</string>
    <string name="pref_top_priority_summary">* Enabling will keep the notification at the top but force a status bar icon.</string>
    <bool name="pref_top_priority_default">true</bool>

    <string name="pref_hide_locked_title">Hidden from lock screen</string>
    <string name="pref_hide_locked_summary">* To hide from lock screen when top priority is enabled, notification privacy should be enabled in your device settings.</string>
    <bool name="pref_hide_locked_default">true</bool>

    <string name="pref_hide_status_title">Hidden status bar icon</string>
    <string name="pref_hide_status_summary">* When top priority is enabled, this will show a blank space in the status bar.</string>
    <bool name="pref_hide_status_default">true</bool>

    <string name="pref_toggle_mute_title">Toggle mute</string>
    <string name="pref_toggle_mute_summary">Media volume button will toggle mute</string>
    <bool name="pref_toggle_mute_default">false</bool>

    <string name="pref_toggle_silent_title">Toggle silent</string>
    <string name="pref_toggle_silent_summary">Ring volume button will toggle silent mode</string>
    <bool name="pref_toggle_silent_default">false</bool>

</resources>
