<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 Seht (R) Hyx Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_cat_style"
        android:title="@string/pref_cat_style_title">
        <ListPreference
            android:defaultValue="@string/pref_theme_default"
            android:dialogTitle="@string/pref_theme_title"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:key="pref_theme"
            android:summary="@string/pref_theme_summary"
            android:title="@string/pref_theme_title" />
        <net.hyx.app.volumenotification.DialogPrefButtons
            android:dialogTitle="@string/pref_buttons_title"
            android:key="pref_buttons_dialog"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/pref_buttons_summary"
            android:title="@string/pref_buttons_title" />
        <net.hyx.app.volumenotification.DialogPrefCustomTheme
            android:dialogTitle="@string/pref_custom_theme_title"
            android:key="pref_custom_theme_dialog"
            android:negativeButtonText="@android:string/cancel"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/pref_custom_theme_summary"
            android:title="@string/pref_custom_theme_title" />
        <SwitchPreference
            android:defaultValue="@bool/pref_translucent_default"
            android:key="pref_translucent"
            android:summary="@string/pref_translucent_summary"
            android:title="@string/pref_translucent_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_cat_config"
        android:title="@string/pref_cat_config_title">
        <SwitchPreference
            android:defaultValue="@bool/pref_boot_default"
            android:key="pref_boot"
            android:summary="@string/pref_boot_summary"
            android:title="@string/pref_boot_title" />
        <SwitchPreference
            android:defaultValue="@bool/pref_top_priority_default"
            android:key="pref_top_priority"
            android:summary="@string/pref_top_priority_summary"
            android:title="@string/pref_top_priority_title" />
        <SwitchPreference
            android:defaultValue="@bool/pref_hide_locked_default"
            android:key="pref_hide_locked"
            android:summary="@string/pref_hide_locked_summary"
            android:title="@string/pref_hide_locked_title" />
        <SwitchPreference
            android:defaultValue="@bool/pref_hide_status_default"
            android:key="pref_hide_status"
            android:summary="@string/pref_hide_status_summary"
            android:title="@string/pref_hide_status_title" />
        <SwitchPreference
            android:defaultValue="@bool/pref_toggle_mute_default"
            android:key="pref_toggle_mute"
            android:summary="@string/pref_toggle_mute_summary"
            android:title="@string/pref_toggle_mute_title" />
    </PreferenceCategory>

</PreferenceScreen>
