<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="pref_screen_settings">

    <PreferenceCategory
        app:key="pref_cat_behavior"
        app:title="@string/pref_cat_behavior_title">

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pref_toggle_mute_default"
            app:key="pref_toggle_mute"
            app:summary="@string/pref_toggle_mute_summary"
            app:title="@string/pref_toggle_mute_title"/>
        <SwitchPreferenceCompat
            app:defaultValue="@bool/pref_toggle_silent_default"
            app:key="pref_toggle_silent"
            app:summary="@string/pref_toggle_silent_summary"
            app:title="@string/pref_toggle_silent_title"/>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
