<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 Seht (R) Hyx Ltd.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_dialog_viewport">

    <LinearLayout style="@style/style_dialog">

        <LinearLayout style="@style/style_dialog_row_horizontal_with_padding">

            <Spinner
                android:id="@+id/pref_buttons_icon_btn_1"
                style="@style/style_dialog_widget_horizontal"
                android:entries="@array/pref_buttons_icon_entries" />

            <EditText
                android:id="@+id/pref_buttons_label_btn_1"
                style="@style/style_dialog_widget_text_inline"
                android:hint="@string/btn_sel_1_label"
                android:inputType="text"
                android:text="@string/btn_sel_1_label" />
        </LinearLayout>

        <LinearLayout style="@style/style_dialog_row_horizontal_with_padding">

            <Spinner
                android:id="@+id/pref_buttons_icon_btn_2"
                style="@style/style_dialog_widget_horizontal"
                android:entries="@array/pref_buttons_icon_entries" />

            <EditText
                android:id="@+id/pref_buttons_label_btn_2"
                style="@style/style_dialog_widget_text_inline"
                android:hint="@string/btn_sel_2_label"
                android:inputType="text"
                android:text="@string/btn_sel_2_label" />
        </LinearLayout>

        <LinearLayout style="@style/style_dialog_row_horizontal_with_padding">

            <Spinner
                android:id="@+id/pref_buttons_icon_btn_3"
                style="@style/style_dialog_widget_horizontal"
                android:entries="@array/pref_buttons_icon_entries" />

            <EditText
                android:id="@+id/pref_buttons_label_btn_3"
                style="@style/style_dialog_widget_text_inline"
                android:hint="@string/btn_sel_3_label"
                android:inputType="text"
                android:text="@string/btn_sel_3_label" />
        </LinearLayout>

        <LinearLayout style="@style/style_dialog_row_horizontal_with_padding">

            <Spinner
                android:id="@+id/pref_buttons_icon_btn_4"
                style="@style/style_dialog_widget_horizontal"
                android:entries="@array/pref_buttons_icon_entries" />

            <EditText
                android:id="@+id/pref_buttons_label_btn_4"
                style="@style/style_dialog_widget_text_inline"
                android:hint="@string/btn_sel_4_label"
                android:inputType="text"
                android:text="@string/btn_sel_4_label" />
        </LinearLayout>

        <LinearLayout style="@style/style_dialog_row_horizontal_with_padding">

            <Spinner
                android:id="@+id/pref_buttons_icon_btn_5"
                style="@style/style_dialog_widget_horizontal"
                android:entries="@array/pref_buttons_icon_entries" />

            <EditText
                android:id="@+id/pref_buttons_label_btn_5"
                style="@style/style_dialog_widget_text_inline"
                android:hint="@string/btn_sel_5_label"
                android:inputType="text"
                android:text="@string/btn_sel_5_label" />
        </LinearLayout>

        <LinearLayout style="@style/style_dialog_row_horizontal_with_padding">

            <Spinner
                android:id="@+id/pref_buttons_icon_btn_6"
                style="@style/style_dialog_widget_horizontal"
                android:entries="@array/pref_buttons_icon_entries" />

            <EditText
                android:id="@+id/pref_buttons_label_btn_6"
                style="@style/style_dialog_widget_text_inline"
                android:hint="@string/btn_sel_6_label"
                android:inputType="text"
                android:text="@string/btn_sel_6_label" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>